# python-project-50

./: .gitignore  MakeFile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml  my_check.yml
gendiff/: __init__.py  cli.py  diff.py  first.py  generate_diff.py  io.py  open_file.py  parser.py
gendiff/formats/: choice_format.py  json.py  plain.py  stylish.py
gendiff/formatters/: choice_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: file_reader.py  gendiff.py
tests/: first.py  test_diff.py  test_formatters.py  test_generate_diff.py  test_json.py  test_plain.py  test_stylish.py  test_utility.py
tests/fixtures/: diff.txt  exp1_given_diff.txt  exp1_plain.txt  expected_diff.json  expected_diff.txt  expected_json.txt  expected_plain.txt  expected_stylish.txt
tests/test_files/: file3.json
